tests/snapshots/regression-security_status-enforcer_status_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Enforcer
ship/capacitorStablePercentage               = 0.000000
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 10.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 42.000000
ship/passiveShieldEffectiveRechargeRate      = 8.955224
ship/passiveShieldRechargeRate               = 6.000000
ship/shieldEffectiveBoostRate                = 77.611938
ship/armorEffectiveRepairRate                = 91.542286
ship/shieldBoostRate                         = 52.000000
ship/armorRepairRate                         = 61.333333
ship/ehp                                     = 7835.820700
ship/shieldThermalDamageEffectiveResonance   = 0.167500
ship/shieldKineticDamageEffectiveResonance   = 0.167500
ship/shieldExplosiveDamageEffectiveResonance = 0.167500
ship/shieldEmDamageEffectiveResonance        = 0.167500
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.167500
ship/armorKineticDamageEffectiveResonance    = 0.167500
ship/armorExplosiveDamageEffectiveResonance  = 0.167500
ship/armorEmDamageEffectiveResonance         = 0.167500
ship/shieldEhp                               = 3358.208872
ship/hullEhp                                 = 1119.402957
ship/armorEhp                                = 3358.208872
ship/shieldDamageEffectiveResonance          = 0.670000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.670000
ship/damagePerSecondWithReload               = 39.782252
ship/damagePerSecondWithoutReload            = 41.606149
ship/damageAlpha                             = 137.500000
ship/powerFree                               = 1184.800000
ship/cpuFree                                 = 501.500000
ship/capacitorDepletesIn                     = 57.000000
ship/capacitorPeakDeltaPercentage            = -177.415385
ship/capacitorPeakDelta                      = -22.880952
ship/capacitorPeakLoad                       = 35.777778
ship/capacitorPeakRecharge                   = 12.896825
ship/alignTime                               = 6.433272
ship/hp                                      = 750.000000
ship/powerOutput                             = 1437.500000
ship/powerLoad                               = 252.700000
ship/maxVelocity                             = 237.500000
ship/cpuOutput                               = 625.000000
ship/cpuLoad                                 = 123.500000
ship/rechargeRate                            = 315000.000000
ship/agility                                 = 0.371250
ship/maxTargetRange                          = 112500.000000
ship/scanSpeed                               = 3375.000000
ship/warpCapacitorNeed                       = 0.000001
ship/scanGravimetricStrength                 = 42.000000
ship/shieldCapacity                          = 2250.000000
ship/armorHP                                 = 2250.000000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusAC                             = 25.000000
ship/shieldRechargeRate                      = 937500.000000
ship/capacitorCapacity                       = 1625.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = -25.000000
ship/shipBonusMC                             = -25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 400.000000
ship/warpSpeedMultiplier                     = 6.000000
ship/shipBonusAC2                            = 50.000000
ship/shipBonusCC2                            = 50.000000
ship/shipBonusGC2                            = 37.500000
ship/shipBonusMC2                            = 50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/eliteBonusReconShip1                    = 50.000000
ship/eliteBonusReconShip2                    = 25.000000
ship/eliteBonusReconShip3                    = 50.000000
ship/inverseCappedSecStatus                  = -5.000000
ship/concordTankBonus                        = 50.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 137.500000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                         = Heavy Assault Missile Launcher II
high_1/state                        = active
high_1/damageVolley                 = 137.500000
high_1/speedWithReload              = 3456.315147
high_1/speedOfReload                = 151.515147
high_1/damagePerSecondWithReload    = 39.782252
high_1/damagePerSecondWithoutReload = 41.606149
high_1/chargeAmount                 = 66.000002
high_1/power                        = 101.700000
high_1/cpu                          = 37.500000
high_1/speed                        = 3304.800000
high_1/heatDamage                   = 0.750000
high_1/charge/type                  = Scourge Heavy Assault Missile
high_1/charge/maxVelocity           = 3375.000000
high_1/charge/kineticDamage         = 137.500000
high_1/charge/explosionDelay        = 9000.000000
high_1/charge/aoeVelocity           = 151.500000
high_1/charge/aoeCloudSize          = 93.750000

medium_1/type              = Medium Shield Booster II
medium_1/state             = active
medium_1/shieldBoostRate   = 52.000000
medium_1/capacitorPeakLoad = 18.000000
medium_1/cycleTime         = 3000.000000
medium_1/capacitorNeed     = 54.000000
medium_1/shieldBonus       = 156.000000
medium_1/heatDamage        = 0.750000

low_1/type              = Medium Armor Repairer II
low_1/state             = active
low_1/armorRepairRate   = 61.333333
low_1/capacitorPeakLoad = 17.777778
low_1/cycleTime         = 9000.000000
low_1/duration          = 9000.000000
low_1/armorDamageAmount = 552.000000
low_1/heatDamage        = 3.975000
