tests/snapshots/regression-security_status-sidewinder_status_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Sidewinder
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 7.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 30.000000
ship/passiveShieldEffectiveRechargeRate      = 8.706467
ship/passiveShieldRechargeRate               = 4.666667
ship/ehp                                     = 3544.776031
ship/shieldThermalDamageEffectiveResonance   = 0.134000
ship/shieldKineticDamageEffectiveResonance   = 0.134000
ship/shieldExplosiveDamageEffectiveResonance = 0.134000
ship/shieldEmDamageEffectiveResonance        = 0.134000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.167500
ship/armorKineticDamageEffectiveResonance    = 0.167500
ship/armorExplosiveDamageEffectiveResonance  = 0.167500
ship/armorEmDamageEffectiveResonance         = 0.167500
ship/shieldEhp                               = 1632.462646
ship/hullEhp                                 = 606.343268
ship/armorEhp                                = 1305.970117
ship/shieldDamageEffectiveResonance          = 0.536000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.670000
ship/damagePerSecondWithReload               = 36.610810
ship/damagePerSecondWithoutReload            = 38.218222
ship/damageAlpha                             = 92.338123
ship/powerFree                               = 83.000000
ship/cpuFree                                 = 316.250000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDelta                      = 8.333333
ship/capacitorPeakRecharge                   = 8.333333
ship/alignTime                               = 4.192154
ship/hp                                      = 406.250000
ship/powerOutput                             = 87.500000
ship/powerLoad                               = 4.500000
ship/maxVelocity                             = 468.750000
ship/cpuOutput                               = 331.250000
ship/cpuLoad                                 = 15.000000
ship/rechargeRate                            = 150000.000000
ship/agility                                 = 2.160000
ship/maxTargetRange                          = 68750.000000
ship/scanSpeed                               = 1500.000000
ship/warpCapacitorNeed                       = 0.000001
ship/scanGravimetricStrength                 = 30.000000
ship/shieldCapacity                          = 875.000000
ship/armorHP                                 = 875.000000
ship/shieldEmDamageResonance                 = 0.536000
ship/shieldExplosiveDamageResonance          = 0.536000
ship/shieldKineticDamageResonance            = 0.536000
ship/shieldThermalDamageResonance            = 0.536000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusCF                             = 50.000000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 500.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 50.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 1000.000000
ship/eliteBonusCovertOps1                    = 75.000000
ship/shipBonusGF2                            = 37.500000
ship/shipBonusMF2                            = 50.000000
ship/warpSpeedMultiplier                     = 14.000000
ship/eliteBonusCovertOps2                    = 75.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/eliteBonusCovertOps3                    = -50.000000
ship/shipBonus3CF                            = -20.000000
ship/inverseCappedSecStatus                  = 0.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/ATFrigDmgBonus                          = 0.000000
ship/ATInverseSecStatus                      = -5.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                         = 125mm Gatling AutoCannon II
high_1/state                        = active
high_1/damageVolley                 = 46.963123
high_1/speedWithReload              = 2209.999999
high_1/speedOfReload                = 49.999999
high_1/damagePerSecondWithReload    = 21.250282
high_1/damagePerSecondWithoutReload = 21.742187
high_1/chargeAmount                 = 200.000004
high_1/cycleTime                    = 2160.000000
high_1/power                        = 0.900000
high_1/cpu                          = 2.250000
high_1/speed                        = 2160.000000
high_1/maxRange                     = 600.000000
high_1/damageMultiplier             = 3.913594
high_1/falloff                      = 8062.500000
high_1/trackingSpeed                = 521.250000
high_1/barrageDmgMultiplier         = 3.913594
high_1/barrageFalloff               = 8062.500000
high_1/entityFlyRange               = 250.000000
high_1/heatDamage                   = 0.600000
high_1/charge/type                  = EMP S

high_2/type                         = Rocket Launcher II
high_2/state                        = active
high_2/damageVolley                 = 45.375000
high_2/speedWithReload              = 2953.999996
high_2/speedOfReload                = 199.999996
high_2/damagePerSecondWithReload    = 15.360528
high_2/damagePerSecondWithoutReload = 16.476035
high_2/chargeAmount                 = 50.000001
high_2/power                        = 3.600000
high_2/cpu                          = 12.750000
high_2/speed                        = 2754.000000
high_2/heatDamage                   = 0.600000
high_2/charge/type                  = Scourge Rocket
high_2/charge/maxVelocity           = 3375.000000
high_2/charge/kineticDamage         = 45.375000
high_2/charge/explosionDelay        = 4500.000000
high_2/charge/aoeVelocity           = 225.000000
high_2/charge/aoeCloudSize          = 15.000000
